--- a/client/src/app/module/subject/subject.component.html
+++ b/client/src/app/module/subject/subject.component.html
@@ -57,7 +57,8 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Select Teacher</mat-label>
                             <mat-select formControlName="FacultyId">
-                                <mat-option *ngFor="let f of faculty" [value]="faculty.Id">{{f.Name}}</mat-option>
+                                <!-- <mat-option *ngFor="let f of faculty" [value]="faculty.Id">{{f.Name}}</mat-option> -->
+                                <mat-option value="00022014-7242-689e-6620-11a2bfa18a23">Samina Mam</mat-option>
                             </mat-select>
                         </mat-form-field>
                         
