--- a/client/src/app/module/attendance/attendance.component.html
+++ b/client/src/app/module/attendance/attendance.component.html
@@ -24,7 +24,7 @@
                 <mat-list class="less-att-list">
                     <mat-list-item *ngFor="let student of Students">
                         <i class="bi list-icon bi-person-exclamation" matListItemIcon></i>
-                        <div matListItemTitle class="less-att-list">{{student.name}}  &nbsp;&nbsp;&nbsp;&nbsp; #{{student.roll}}</div>
+                        <div matListItemTitle class="less-att-list">{{student.Name}}  &nbsp;&nbsp;&nbsp;&nbsp; #{{student.UserName}}</div>
                         <!-- <div matListItemLine class="less-att-list">#{{student.roll}}</div> -->
                     </mat-list-item>
                 </mat-list>
