--- a/client/src/app/module/profile/student/student.component.html
+++ b/client/src/app/module/profile/student/student.component.html
@@ -9,10 +9,10 @@
             <p class="box-title m-t-1 f-70 f-full">Personal Information</p>
             <button class="primery-btn" (click)="edit()"><i class="bi bi-pencil-square"></i></button>
             <p class=" box ">
-                
+                {{studentDetails.FirstName}}  {{studentDetails.LastName}}
             </p>
             <p class=" box f-full">
-                <i class="bi bi-person"></i> STU588840
+                <i class="bi bi-person"></i> {{studentDetails.UserName}}
             </p>
             <p class=" box f-full">
                 Male
